--- a/src/main/java/view/DataStorageSelection.form
+++ b/src/main/java/view/DataStorageSelection.form
@@ -133,6 +133,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="18" style="0"/>
         </Property>
+        <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="File (Serialization)"/>
       </Properties>
       <Events>
